# NovelNest-Book_List

./: app.py  models.py  pyproject.toml  requirements.txt
instance/: database.db
static/: styles.css
templates/: favorites.html  index.html  upload.html
